--- a/literature.bib
+++ b/literature.bib
@@ -58455,4 +58455,22 @@ pages={1707--1713}}
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{Shore1988OnTS,
+  title={On the so-called Finnish passive},
+  author={S. Shore},
+  journal={WORD},
+  year={1988},
+  volume={39},
+  pages={151-176}
+}
+
+@article{Blevins2003PassivesAI,
+  title={Passives and impersonals},
+  author={J. Blevins},
+  journal={Journal of Linguistics},
+  year={2003},
+  volume={39},
+  pages={473 - 520}
+}
+
 
