--- a/name.tex
+++ b/name.tex
@@ -1,25 +1,5 @@
-%\documentclass[11pt,letterpaper]{article}
+\documentclass[11pt,letterpaper]{article}
  %\documentclass[man]{apa7}
-\documentclass[natbib,doc,nolmodern]{apa6}
-
-\usepackage[english]{babel}
-\usepackage{amsmath,amssymb}
-\usepackage{txfonts}  %%% fixes problem with \boldsymbol
-\usepackage{graphicx}
-\usepackage{pgf}
-\usepackage{pgfplots}
-\usepackage{tikz}
-\usepackage{xcolor}
-\usepackage[colorlinks=true,allcolors=blue]{hyperref}
-\usepackage{linguex}
-\usepackage{multirow}
-\usepackage{dcolumn}
-\usepackage{rotating}
-\usepackage[colorinlistoftodos,prependcaption,textsize=scriptsize]{todonotes}
-
-\usepackage{colortbl}
-\usepackage{hyperref}
-
 
 \usepackage{showlabels}
 \usepackage{fullpage}
@@ -49,17 +29,6 @@
 %\usepackage{xeCJK}
 %\usepackage{natbib}
 
-
-% by default apa6.sty doesn't number sections
-\setcounter{secnumdepth}{3}
-
-
-\frenchspacing
-
-
-%% genitive citations
-\newcommand{\citegen}[1]{\citeauthor{#1}'s (\citeyear{#1})}
-
 \bibliographystyle{unsrtnat}
 
 %\usepackage{latexsym}
@@ -88,8 +57,6 @@
 
 \title{Morpheme Ordering across Languages Reflects Optimization for Processing Efficiency}
 
-\shorttitle{Morpheme Ordering Reflects Processing Efficiency}
-
 \author{Michael Hahn, Rebecca Mathew, Judith Degen}
 
 
@@ -98,8 +65,8 @@
 
 
 
-%\newcommand{\citep}{\parencite}
-%\newcommand{\citet}{\Textcite}
+\newcommand{\citep}{\parencite}
+\newcommand{\citet}{\Textcite}
 
 
 
@@ -170,6 +137,12 @@
 \usepackage{longtable}
 
 
+
+%\frenchspacing
+%\def\baselinestretch{0.975}
+
+%\emnlpfinalcopy
+%\def\emnlppaperid{496}
 
 
 \begin{document}
