Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -124,9 +124,9 @@
 %All code and data is freely available at \url{https://github.com/beckymathew/morpheme-ordering}.
 %  }
 
-\renewcommand{\thefigure}{S\arabic{figure}}
-\renewcommand{\thetable}{S\arabic{table}}
-\renewcommand{\thesection}{S\arabic{section}}
+%\renewcommand{\thefigure}{S\arabic{figure}}
+%\renewcommand{\thetable}{S\arabic{table}}
+%\renewcommand{\thesection}{S\arabic{section}}
 
 \newcommand{\utterance}{\mathcal{U}}
 \newcommand{\tree}{\mathcal{T}}
@@ -754,9 +754,9 @@ Finnish is the only language where the optimized ordering underperforms the univ
 This can be traced to the properties of the Finnish form commonly called ``passive'':
 The Finnish passive is marked by two morphemes, conventionally regarded as a voice marker (-\textit{t}-) and an agreement marker (-\textit{Vn}, \citet[Section 69]{karlsson1999finnish}); we followed this convention in Table~\ref{tab:slots-verbs}.
 Functionally, these two morphemes always appear together and have no distinct meanings.
-Both can equally well be regarded as markers of the passive; there is no reason other than the match with the \textsc{Verb Affix Ordering} universal to regard one as a voice marker and the other as an agreement marker.
-Furthermore, unlike the passive of most languages, the Finnish passive is insensitive to the verb's argument structure, simply denoting that an unspecified agent performed an action \citep{Shore1988OnTS,Blevins2003PassivesAI}.
-Therefore, the theories of semantic relevance and semantic scope discussed in Section~\ref{sec:previous} would arguably also predict the ``passive'' marker to pattern with agreement markers, unlike the actual Finnish ordering but in agreement with the Efficient Tradeoff Hypothesis.
+Both can equally well be regarded as markers of the passive; there is no reason other than the match with the \textsc{Verb Affix Ordering} universal for the conventional view that one is a voice marker and the other is an agreement marker.
+More interestingly, unlike the passive of most languages, the Finnish passive is insensitive to the verb's argument structure, simply denoting that an unspecified agent performed an action \citep{Shore1988OnTS,Blevins2003PassivesAI}.
+Therefore, the theories of semantic relevance and semantic scope discussed in Section~\ref{sec:previous} would arguably also predict the Finnish ``passive'' marker to pattern with agreement markers, unlike the actual Finnish ordering but in agreement with the Efficient Tradeoff Hypothesis.
 
 
 %This means that the agreement marker has substantial mutual information with the voice morpheme, and optimized orderings prefer agreement and voice morphemes to be adjacent.
@@ -1014,7 +1014,7 @@ If this is true, then the Efficient Tradeoff Hypothesis generally predicts order
 However, it also predicts that orderings can deviate from conceptual structure depending on the statistics of the input.
 In particular, the Efficient Tradeoff Hypothesis formally explains the finding that, in the artificial language learning experiments of \citet{saldana2021cross}, a preference for orderings following Greenberg's Unviersal 30 could be reversed when the form of the case suffix depended on the noun:
 If the choice of case suffix depends on the noun, this increases the mutual information between the case suffix and the noun stem.
-As a consequence, orderings become more efficient that place the case suffix closer to the noun stem.
+As a consequence, orderings are more efficient when they place the case suffix closer to the noun stem.
 
 %Furthermore, if the semantic propositions that speakers communicate are modeled using a probabilistic language-of-thought grammar such as mutual information will also correlate with scope ordering (see SI Appendix Section S4 for a simulation study).
 
