--- a/literature.bib
+++ b/literature.bib
@@ -58474,3 +58474,24 @@ pages={1707--1713}}
 }
 
 
+@inproceedings{nordhoff2011glottolog,
+        title="Glottolog/langdoc: defining dialects, languages, and language families as collections of resources",
+        author="Sebastian {Nordhoff} and Harald {Hammarström}",
+        booktitle="LISC'11 Proceedings of the First International Conference on Linked Science - Volume 783",
+        pages="53--58",
+        notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1923658367",
+        year="2011"
+}
+
+
+@book{glottolog,
+  address      = {Leipzig},
+  author       = {Harald Hammarström and Robert Forkel and Martin Haspelmath and Sebastian Bank},
+  howpublished = {Max Planck Institute for Evolutionary Anthropology},
+  title        = {Glottolog 4.4},
+  url          = {https://glottolog.org/ accessed 2021-07-01},
+  year         = {2021},
+  doi          = {10.5281/zenodo.4761960}
+}
+
+
