--- a/si-korean.tex
+++ b/si-korean.tex
@@ -28,7 +28,7 @@ With this procedure, we identified the nine slots described below:
 We show morphemes occurring at least 50 times in slots 2-8 in Figure~\ref{tab:korean-frequent-morphemes}.
 We do not provide the list of the (very numerous) conjunctive and nominalizing suffixes as these are not the focus of the typological generalization that we are interested in.
 
-Additional morphemes that occur less than 50 times are placed into an UNKNOWN slot, this affects \textcolor{red}{TODO} \% of morpheme occurrences in the dataset.
+Additional morphemes that occur less than 50 times are placed into an UNKNOWN slot. %, this affects \textcolor{red}{TODO} \% of morpheme occurrences in the dataset.
 
 
 %TODO 
