--- a/name.tex
+++ b/name.tex
@@ -284,7 +284,7 @@ This universal is supported by the example in Figure~\ref{fig:noun-inflection}.
 %\end{tabular}
 
 
-	\caption{Examples for noun inflection in the three languages in our sample. All three languages support Greenberg's Universal 39 by placing the case marker after the plural marker, but they differ in the placement of the possessive marker.\mhahn{TODO I'll still adapt the formatting to the verb affix table below}}\label{fig:noun-inflection}
+	\caption{Examples for noun inflection in the three languages in our sample. All three languages support Greenberg's Universal 39 by placing the case marker after the plural marker, but they differ in the placement of the possessive marker.}\label{fig:noun-inflection}
 \end{figure}
 
 
