Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -340,7 +340,7 @@ This universal is supported by the example in Figure~\ref{fig:noun-inflection}.
  \begin{center}
  \includegraphics[width=0.8\textwidth]{figures/slots3.pdf}
  \end{center}
-\caption{Verb affix slots in the six languages, grouped into four universal slots where applicable. Affixes are listed outwards from the root. }\label{tab:slots-verbs}
+\caption{Verb affix slots in the six languages, grouped into four universal slots where applicable. Affixes are listed outwards from the root.}\label{tab:slots-verbs}
  
  \end{figure}
 
@@ -392,18 +392,18 @@ verb stem & valence & voice & TAM & subject agreement
 \textit{Tense} describes where an event is located in time (e.g. past or future).
 \textit{Aspect} describes how an event unfolds over time \citep{comrie1976aspect,dahl1985tense,binnick1991time}.
 %Examples of tense and aspect marking are shown in Figure~\ref{tab:examples-verbs}.
-\textit{Mood} describes a relation between an event and the speaker, including an assessment of the event's reality \cite{palmer1986mood,portner2018mood}.
+\textit{Mood} describes a relation between an event and the speaker, including an assessment of the event's reality \citep{palmer1986mood,portner2018mood}.
 %In analytical languages such as English, mood distinctions are often indicated using verbs such as \textit{might} or adverbs such as \textit{possibly}.
 A common mood category is the potential mood, which indicates possibility (Turkish, Hungarian).
 %Figure~\ref{tab:examples-verbs} shows how it is marked morphologically with -het- in Hungarian \citep{rounds2001hungarian}.
 Aspect and tense categories are often fused in morphology \citep{binnick2012the}, and mood marking is also often fused with those. %; for instance, the Japanese suffix -\textit{yoo} can mark future tense and the hortative mood (`let's ...', \citep{hasegawa2014japanese}).
 Some languages have a single affix slot that accommodates a fused morpheme indicating TAM.
 For instance, Finnish marks both tense (present and past) and mood (indicative, conditional, and potential) categories with a single morpheme in the slot labeled TAM.
-Other languages have multiple slots, for instance, Turkish TAM markers are distributed across two slots (Figure~\ref{tab:examples-verbs}).
+Other languages have multiple slots, for instance, Turkish TAM markers are distributed across three slots (Figure~\ref{tab:examples-verbs}).
 
 \textit{Subject agreement} (orange in Figure~\ref{tab:examples-verbs}) marks categories of the subject, most often its person and number, sometimes also other categories such as its gender \citep{corbett2003agreement}.
 An example is English third-person \textit{-s}.
-In our sample, Turkish, Hungarian, Finnish, and Sesotho have a subject agreement slot (Figure~\ref{tab:examples-verbs}); Turkish also has a special slot occupied only by the third-person plural marker \textit{-lar-} (indicated as 3rdPl in ~\ref{tab:examples-verbs}).
+In our sample, Turkish, Hungarian, Finnish, and Sesotho have a subject agreement slot (Figure~\ref{tab:slots-verbs}); Turkish also has a special slot occupied only by the third-person plural marker \textit{-lar-} (indicated as 3rd Plural in ~\ref{tab:slots-verbs}).
 
 
 %Based on data from several dozens of languages, \citep{bybee-morphology-1985} proposes the following ordering of these common verb affixes:
@@ -420,16 +420,17 @@ Figure~\ref{tab:examples-verbs} shows that the languages in our sample largely s
 While these are particularly common types of affixes, there are further types, some of which occur in the six languages of our sample.
 While agreement is most commonly established with the subject, \textit{agreement with the object} is found in Sesotho \citep{doke1967textbook} (in person and noun class) and in Hungarian \citep{rounds2001hungarian} (in definiteness); it is fused with subject agreement in the Hungarian and shares a slot with Valence in Sesotho (see SI Section S1).
 \textit{Polarity} refers to the opposition between affirmative (e.g. `she arrived') and negative  (e.g., `she did not arrive') statements \citep{wals-112}.
-\textit{Evidentiality} indicates on what evidence a speaker bases an assertion \citep{aikhenvald2003evidentiality}.
+%\textit{Evidentiality} indicates on what evidence a speaker bases an assertion \citep{aikhenvald2003evidentiality}.
 \textit{Formality}, \text{honorifics}, and \text{politeness} are categories that index social relations between the speaker, the addressee, and the topic of the conversation~\citep{hasegawa2014japanese, yeon2010korean}.
 In our sample, these are prominent in Korean and Japanese.
-The Japanese politeness marker -masu- and the Korean formality (-p) and politeness (-yo) suffixes index the social relation between the speaker and the addressee \citep{hasegawa2014japanese, yeon2010korean}; the Korean honorific suffix -si- indexes the social relation between the speaker and the topic of the conversation \citep{yeon2010korean}.
+The Japanese politeness marker -\textit{masu}- and the Korean formality (-\textit{p}) and politeness (-\textit{yo}) suffixes index the social relation between the speaker and the addressee \citep{hasegawa2014japanese, yeon2010korean}; the Korean honorific suffix -\textit{si}- indexes the social relation between the speaker and the topic of the conversation \citep{yeon2010korean}.
 Furthermore, verb forms can have affixes indicating the syntactic position of the verb within a sentence, in particular, affixes marking infinitives or other nonfinite forms.
-We use the term \textit{Syntactic} for this type of morpheme.
+Examples are the \textit{Finiteness} slot (used to mark nonfinite verb forms) in Japanese, the \textit{Connector} and \textit{Nominal} slots (used to mark embedded and nominalized verbs) in Korean, and the \textit{Relative} slot (used inside relative clauses) in Sesotho.
+%We use the term \textit{Syntactic} for this type of morpheme.
 
 %\mhahn{TODO the Finnish passive isn't really a Voice, instead, it is an Impersonal. The suffix could thus just as well be classified as Agreement.}
 
-Having introduced the two universal generalizations about noun and verb affixes, we first review existing accounts of morpheme ordering (Section~\ref{sec:previous}).
+Having introduced the two universal generalizations about noun and verb affixes, we now review existing accounts of morpheme ordering (Section~\ref{sec:previous}).
 
 
 %We focus on inflection, except in those cases where derivational affixes are clearly marked in available data.
