--- a/literature.bib
+++ b/literature.bib
@@ -58272,7 +58272,7 @@ African Linguistics",
 
 @incollection{courtenay1895attempt,
     author="Baudouin de Courtenay",
-    year="1895 [1972]",
+    year="1972",
     title="An attempt at a theory of phonetic alternations",
     editor="Edward Stankiewicz",
     booktitle="A Baudouin de Courtenay anthology",
