--- a/literature.bib
+++ b/literature.bib
@@ -58495,3 +58495,9 @@ pages={1707--1713}}
 }
 
 
+
+@book{marr-vision,
+  title={Vision: A computational investigation into the human representation},
+  author={D. Marr},
+  year={1982}
+}
