Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -550,7 +550,7 @@ This is a cognitive account of the ordering of words and morphemes in human lang
 The memory-surprisal tradeoff links information-theoretic models of memory limitations with surprisal theory.
 
 Surprisal theory \citep{hale2001probabilistic, levy2008expectation} is a theory of the word-by-word processing difficulty in online processing.
-It states that the processing effort on a word $w_t$ in context $w-1 ... w_{t-1}$ is proportional to its surprisal
+It states that the processing effort on a word $w_t$ in context $w_1 ... w_{t-1}$ is proportional to its surprisal
      \begin{equation}   \label{eq:true-surp}
     \text{Difficulty} \propto -\log P(w_t | w_1\dots w_{t-1}).
 \end{equation}
